Document that Range#cover? returns false if <=> returns nil

Fixes [Bug #12090]